# cafe

./: .gitignore
Assets/: .gitignore  database.json  packages.config
Assets/AddressableAssetsData/: AddressableAssetSettings.asset  DefaultObject.asset
Assets/Editor/: PlayerDataContainerDebuggerCustomEditor.cs
Assets/Localization/: AppInfo Shared Data.asset  AppInfo.asset  AppInfo_en.asset  AppInfo_ko.asset  Commons Shared Data.asset  Commons.asset  Commons_en.asset  Commons_ko.asset  Ingame UI Shared Data.asset  Ingame UI.asset  Ingame UI_en.asset  Ingame UI_ko.asset  Items Shared Data.asset  Items.asset  Items_en.asset  Items_ko.asset  Localization Settings.asset
Assets/Prefabs/: Favorability Effect.prefab  Jelly.prefab  Special Customer.prefab  heart.prefab  object.prefab  trash c1.prefab  trash c2.prefab  trash c3.prefab  trash1.prefab  trash2.prefab  trash3.prefab  trash4.prefab
Assets/Resources/Localization/: README.md
Assets/Resources/Localization/LocaleTableGenerator/: .gitignore  README.md  pyproject.toml
Assets/Resources/Localization/LocaleTableGenerator/src/locale_table_generator/: __init__.py  app.py
Assets/Scenes/: IntroScene.unity  SampleScene.unity
Assets/Scripts/: ClickManager.cs  ClickableObject.cs  CollectedManager.cs  DataManager.cs  GameManager.cs  GoldPopup.cs  Install.cs  Jelly.cs  MapManager.cs  Object.cs  ObjectSelector2D.cs  ObjectSpawner.cs  PlacementController.cs  Room.cs  Scene Manager.cs  SceneLoader.cs  SoundManager.cs  SpecialCustomer.cs
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
(+67 files in other folders)
